# bank_operations

./: .coverage  .flake8  README.md  pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/:  test_masks.py   test_processing.py  main.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
