[tool.poetry]
name = "my-bank-example"
version = "0.1.0"
description = "Описание вашего проекта"
authors = ["Ваше Имя <ваш.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.packages]
include = [
    { include = "my_bank_example" }  # Укажите имя вашего пакета
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"
pytest = "^8.3.4"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'